Resolve issue #20 by setting progress cursor in between long running operations (seems to not be visible at my machine however because of the high speed, needs testing on slow machine).

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ body
 	color:white;
 }
 
+body.waiting * {
+    cursor: progress;
+}
+
 #top
 {
 }
